# blastfurnace

./: .gitignore  Cargo.toml  README.md
sample_code/src/: main.ing  test.ing
sample_code/src/test/: helpful.ing
sample_project/: blastf.toml
sample_project/src/: main.ing
sample_project/src/test/: helpful.ing
src/: back.rs  cli.rs  front.rs  lib.rs  main.rs  middle.rs
src/back/: code_generator.rs
src/back/code_generator/: generator.rs
src/cli/: arg_runner.rs  build.rs  new.rs
src/front/: ast_retriever.rs  ast_types.rs  exporter.rs  file_system.rs  internal_ast_types.rs  lexical.rs  mergers.rs  mod.rs  module_resolution.rs  name_resolution.rs  passes.rs  semantic.rs  structure.rs  syntax.rs
src/front/ast_retriever/: lexical.rs  name_resolution.rs  reader.rs  retriever.rs
src/front/ast_types/: visitor.rs
src/front/exporter/: convert.rs  export.rs
src/front/file_system/: byte_stream.rs  fs.rs  mock_fs.rs  system_fs.rs
src/front/lexical/: lexer.rs  lexer_string_reader.rs  token_types.rs
src/front/mergers/: convert.rs  definition_table.rs  package.rs  program.rs
src/front/module_resolution/: definition_table.rs  merged_module.rs  module_merger.rs  module_resolver.rs  name_map.rs  resolvers.rs
src/front/name_resolution/: lib.rs  name_resolver.rs  resolver.rs  resolvers.rs  scope_table.rs
src/front/passes/: check_assignment.rs  types.rs
src/front/semantic/: name_resolution.rs
src/front/structure/: fs.rs  merged_module.rs  package.rs  program.rs
src/front/syntax/: ast_types.rs  (+2 more)
src/middle/: format.rs  passes.rs
src/syntax/: mod.rs
(+44 files in other folders)
