[package]
name = "blastfurnace"
version = "0.1.0"
authors = ["Hanmin Kim"]
edition = "2021"
homepage = "https://hanmin.dev/ingot-docs/"
repository = "https://github.com/hanmindev/blastfurnace/"

[[bin]]
name = "blastf"
path = "src/main.rs"
test = true
doctest = true


[dependencies]
camino = "1.1.6"
clap = { version = "4.5.1", features = ["derive"] }
either = "1.10.0"
toml = "0.8.10"
